# overlay-bioinformatics

./: README.md  default.nix  flake.nix
Rscape/: default.nix
cmcompare-bin/: default.nix
cmcompare-varbin/: default.nix
cmdstan/: default.nix
dotcoder/: configure.ac.patch  default.nix
hmmer/: default.nix
infernal/: default.nix
locarna/: 19.nix  20.nix  default.nix
locarna2/: default.nix
ncbi-sratools-bin/: default.nix
ncbiblast-bin/: default.nix
rapidnj/: default.nix
rnasnp/: default.nix
sss-test/: SSS-test.tgz  SSS.sh  default.nix  local.sh  nix-bundle.sh
taiyaki/: default.nix  pyproject.toml
viennarna/: 24.nix  25.nix  default.nix
