[tool.poetry]
name = "taiyaki"
version = "5.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
h5py = ">=2.2.1,<=2.6.0"
numpy = ">=1.14.5"
biopython = ">=1.63"
Cython = ">=0.25.2"
wheel = ">=0.29.0"
ont_fast5_api = "1.2.0"
pysam = ">=0.15.0"
matplotlib = ">=2.0.0"
scipy = ">=1"
torch = "1.2"

[tool.poetry.dev-dependencies]
pytest = ">=5,<6"
pytest-xdist = ">=1,<2"
pytest-runner = ">=5,<6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
